# ChangeLog for app-doc/elisp-manual
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/elisp-manual/ChangeLog,v 1.19 2009/10/03 23:48:23 fauli Exp $

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  elisp-manual-23.3.0.ebuild:
  stable x86, bug 287460

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  elisp-manual-22.2.9.ebuild:
  stable x86, bug 287460

*elisp-manual-20.2.5 (17 Sep 2009)
*elisp-manual-19.2.4.2 (17 Sep 2009)

  17 Sep 2009; Ulrich Mueller <ulm@gentoo.org>
  -files/elisp-manual-18.1.03-direntry.patch,
  -files/elisp-manual-18.1.03-fix-texinfo.patch,
  -files/elisp-manual-21.2.8-direntry.patch,
  -files/elisp-manual-21.2.8-fix-texinfo.patch,
  elisp-manual-18.1.03.ebuild, +elisp-manual-19.2.4.2.ebuild,
  +elisp-manual-20.2.5.ebuild, elisp-manual-21.2.8-r2.ebuild:
  Add manuals for Emacs versions 19 and 20, for the sake of completeness.
  Patchsets moved to mirrors. Re-add accidentally dropped keywords.

*elisp-manual-23.3.0 (05 Sep 2009)
*elisp-manual-22.2.9 (05 Sep 2009)

  05 Sep 2009; Ulrich Mueller <ulm@gentoo.org> elisp-manual-18.1.03.ebuild,
  elisp-manual-21.2.8-r2.ebuild, +elisp-manual-22.2.9.ebuild,
  +files/elisp-manual-22.2.9-direntry.patch, +elisp-manual-23.3.0.ebuild,
  +files/elisp-manual-23.3.0-direntry.patch:
  Add stand-alone manual for Emacs 22 and 23. Don't use versionator.eclass,
  it has no advantage here.

  17 Feb 2009; Ulrich Mueller <ulm@gentoo.org> elisp-manual-18.1.03.ebuild,
  elisp-manual-21.2.8-r2.ebuild:
  Install README files.

  03 Jan 2009; Ulrich Mueller <ulm@gentoo.org>
  -elisp-manual-21.2.8-r1.ebuild:
  Remove old.

  03 Jan 2009; nixnut <nixnut@gentoo.org> elisp-manual-21.2.8-r2.ebuild:
  ppc stable #252747

  31 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  elisp-manual-18.1.03.ebuild, elisp-manual-21.2.8-r2.ebuild:
  s390/x86 stable wrt #252747

  28 Dec 2008; Tiago Cunha <tcunha@gentoo.org>
  elisp-manual-21.2.8-r2.ebuild: