@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/elisp-manual/Attic/elisp-manual-23.3.0.ebuild,v 1.2 2009/10/03 23:48:23 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/elisp-manual/Attic/elisp-manual-23.3.0.ebuild,v 1.3 2009/10/24 12:56:56 nixnut Exp $
 
 inherit eutils
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://gentoo/${MY_P}.tar.bz2"
 
 LICENSE="FDL-1.3"
 SLOT="23"
-KEYWORDS="~amd64 ~ppc ~s390 ~sparc x86"
+KEYWORDS="~amd64 ppc ~s390 ~sparc x86"
 IUSE=""
 
 S="${WORKDIR}/${MY_P}"
